sceptre/templates/security-groups.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: SGs for the app servers, DB and ALB

Parameters:
  Project:
    Description: Name of the project
    Type: String
  Environment:
    Description: Environment where the stack is launched
    Type: String
    AllowedValues:
      - dev
      - prod
  VpcId:
    Description: VPC id of the stack
    Type: String
  ApplicationPort:
    Description: Port where the application server runs
    Type: String

Resources:
  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupName: !Sub ${Project}-${Environment}-app-sg
      GroupDescription: SG for the Example Nodejs app
      SecurityGroupIngress:
      - IpProtocol: tcp
        SourceSecurityGroupId: !Ref ALBSecurityGroup
        Description: Allow communication from App to ALB
        FromPort: !Ref ApplicationPort
        ToPort: !Ref ApplicationPort
      - IpProtocol: tcp
        Description: TEMPORARY rule - allow SSHing to the App
        CidrIp: 0.0.0.0/0
        FromPort: 22
        ToPort: 22
      Tags:
      - Key: Name
        Value: !Sub app-sg-${Project}-${Environment}
  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupName: !Sub ${Project}-${Environment}-db-sg
      GroupDescription: SG for the Example PostgreSQL database
      SecurityGroupIngress:
        IpProtocol: tcp
        Description: Allow communication from App to DB
        SourceSecurityGroupId: !Ref AppSecurityGroup
        FromPort: 5432
        ToPort: 5432
      Tags:
      - Key: Name
        Value: !Sub db-sg-${Project}-${Environment}
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupName: !Sub ${Project}-${Environment}-alb-sg
      GroupDescription: SG for the ALB running in front of ECS
      SecurityGroupIngress:
        IpProtocol: tcp
        Description: Allow ALL connections to HTTP port 
        CidrIp: 0.0.0.0/0
        FromPort: 80
        ToPort: 80
      Tags:
      - Key: Name
        Value: !Sub alb-sg-${Project}-${Environment}

Outputs:
  AppSecurityGroupId:
    Description: App server's security group id
    Value: !Ref AppSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}:AppSecurityGroupId
  DBSecurityGroupId:
    Description: DB's security group id
    Value: !Ref DBSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}:DBSecurityGroupId
  ALBSecurityGroupId:
    Description: ALB's security group id
    Value: !Ref ALBSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}:ALBSecurityGroupId
